<resources>
    <string name="app_name">CobongMemo</string>

    <!-- My custom string -->
    <string name="writeMemoTextView">Memo</string>
    <string name="writeMemoTitle">Title</string>
    <string name="writeMemoSub">SubTitle</string>
    <string name="writeMemoContent">Enter Your Content</string>

    <string name="viewpagerMemo">Memo</string>
    <string name="viewpagerAlarm">Alarm</string>
    <string name="viewpagerSchedule">Schedule</string>
    <string name="record">Recording..</string>
    <string name="trans">Convert to text</string>

    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="playing">Audio is playing.. </string>
    <string name="colorSelectTitle">Select color</string>

    <string name="colorSelect">Select color</string>

    <!-- copy string -->
    <string name="main_title">MultiMemo</string>
    <string name="new_title">New Memo</string>
    <string name="view_title">Memo View</string>
    <string name="memo_title">Memo</string>
    <string name="audio_play_title">Audio Play</string>
    <string name="audio_recording_title">Audio Recording</string>
    <string name="audio_recording_start_title">Start Recording</string>
    <string name="audio_recording_stop_title">Record voice</string>
    <string name="video_recording_start_title">Start Video Recording</string>
    <string name="video_recording_stop_title">Stop Video Recording</string>
    <string name="video_recording_message">In Video Recording...</string>
    <string name="selection_title">Selection</string>
    <string name="color_selection_title">Color Selection</string>
    <string name="pen_selection_title">Pen Selection</string>
    <string name="save_btn">Save</string>
    <string name="modify_btn">Modify</string>
    <string name="delete_btn">Delete</string>
    <string name="close_btn">Close</string>
    <string name="confirm_btn">Confirm</string>
    <string name="cancel_btn">Cancel</string>
    <string name="selection_btn">Select</string>
    <string name="yes_btn">Yes</string>
    <string name="no_btn">No</string>
    <string name="video_btn">Video</string>
    <string name="voice_btn">Voice</string>
    <string name="text_btn">Text</string>
    <string name="handwriting_btn">HandWriting</string>
    <string name="color_btn">Color</string>
    <string name="pen_btn">Pen</string>
    <string name="eraser_btn">Eraser</string>
    <string name="undo_btn">Undo</string>
    <string name="handwriting_save_btn">Save Handwriting</string>
    <string name="memo_delete_question">Do you really want to delete the memo?</string>
    <string name="text_input_message">Input a text.</string>
    <string name="no_sdcard_message">No SD card. Please insert SD card first.</string>
    <string name="select_picture_message">Select a picture.</string>
    <string name="item_count">items</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="Success">Success</string>
    <string name="Loading">Loading..</string>

    <!-- main -->
    <string name="finish_app">If you click back button one more, Application is gonna close</string>

    <string name="main_bottom_memo">Memo</string>
    <string name="main_bottom_schedule">Schedule</string>
    <string name="main_bottom_settings">Todo List</string>

    <!-- color picker -->
    <string name="confirm">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="modify_success">modify success</string>


    <!-- common -->
    <string name="text">Text</string>
    <string name="voice">Voice</string>
    <string name="handwrite">Handwrite</string>
    <string name="select_memo_type">Select memo type</string>
    <string name="text_input_title_content">input your title and content</string>
    <string name="text_input_title">input your title </string>
    <string name="text_input_content">input your content</string>
    <string name="text_input_title_subTitle">input yout title and subTitle</string>
    <string name="text_input_subTitle">input your subTitle</string>
    <string name="text_content">content</string>

    <!-- Text Fragment -->

    <!-- Handwrite Fragment -->

    <!-- Voice Fragment -->
    <string name="voice_play_end">play</string>

    <!-- Schedule Fragemnt -->
    <string name="input_schedule">Input your schedule.</string>
    <string name="input_date">Date</string>
    <string name="input_start_time">Start time</string>
    <string name="input_end_time">End time</string>
    <string name="input_place">Place</string>
    <string name="input_description">Description</string>

    <string name="set_alarm">Set your alarm</string>
    <string name="alarm_ontime">on time</string>
    <string name="alarm_ten_minutes_ago">10 minutes ago</string>
    <string name="alarm_thirty_minutes_ago">30 minutes ago</string>
    <string name="alarm_one_hours_ago">1 hour ago</string>
    <string name="alarm_two_hours_ago">2 hours ago</string>
    <string name="alarm_one_day_ago">1 day ago</string>

    <string name="channel_id">schedule alarm</string>
    <string name="channel_description">This is Schedule Alarm Channel</string>


    <string name="select_place">Select Place</string>

    <string name="place_info">search</string>
    <string name="place_info_can_not_find_keyword">Can not find keyword</string>

    <string name="input_check">Check your input. plz</string>


    <!-- TodoList Fragment -->
    <string name="todolist_today">Today Todo List!</string>
    <string name="todolist_tomorrow">Tomorrow Todo List</string>

    <string name="todolist_time_over">Time Over</string>

</resources>
