<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="cobong.jeongwoojin.cobongmemo.cobongmemo.view.memo.voicememo.VoiceViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="@drawable/radius_background"
        android:minWidth="1000dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_small_margin"
            android:hint="@string/voice_input_title"
            app:boxStrokeColor="@color/cobongDarkGray"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_voice_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:inputType="text"
                android:maxLength="30"
                android:singleLine="true"
                android:textSize="@dimen/text_size_sp"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_keyboard_voice_black_24dp" />

            <com.victor.loading.rotate.RotateLoading
                android:id="@+id/rl_loading"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                app:loading_color="#a7a7a7"
                app:loading_speed="11"
                app:loading_width="5dp" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.dd.processbutton.iml.ActionProcessButton
                android:id="@+id/apb_record"
                android:layout_width="0dp"
                android:layout_height="46.5dp"
                android:layout_margin="2dp"
                android:layout_weight="2"
                android:onClick="@{() -> viewmodel.onRecordClick()}"
                android:text="@string/audio_recording_start_title"
                android:textColor="@android:color/white"
                android:textSize="13dp"
                custom:pb_colorComplete="@color/blue_normal"
                custom:pb_colorNormal="@color/blue_normal"
                custom:pb_colorPressed="@color/blue_pressed"
                custom:pb_colorProgress="@color/cobongRed"
                custom:pb_textComplete="@string/audio_recording_start_title"
                custom:pb_textProgress="@string/record" />


            <com.dd.processbutton.iml.ActionProcessButton
                android:id="@+id/apb_stop"
                android:layout_width="0dp"
                android:layout_height="47dp"
                android:layout_margin="3dp"
                android:layout_weight="2"
                android:onClick="@{() -> viewmodel.onStopClick()}"
                android:text="@string/audio_recording_stop_title"
                android:textColor="@android:color/white"
                android:textSize="13dp"
                custom:pb_colorComplete="@color/green_complete"
                custom:pb_colorNormal="@color/blue_normal"
                custom:pb_colorPressed="@color/blue_pressed"
                custom:pb_colorProgress="@color/purple_progress"
                custom:pb_textComplete="@string/audio_recording_stop_title"
                custom:pb_textProgress="@string/Loading" />


            <com.dd.processbutton.iml.ActionProcessButton
                android:id="@+id/apb_exit"
                android:layout_width="0dp"
                android:layout_height="47dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:onClick="@{() -> viewmodel.onExitClick()}"
                android:text="@string/close_btn"
                android:textColor="@android:color/white"
                android:textSize="13dp"
                custom:pb_colorComplete="@color/green_complete"
                custom:pb_colorNormal="@color/blue_normal"
                custom:pb_colorPressed="@color/blue_pressed"
                custom:pb_colorProgress="@color/purple_progress"
                custom:pb_textComplete="@string/Success"
                custom:pb_textProgress="@string/Loading" />

        </LinearLayout>


    </LinearLayout>

</layout>
