<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewmodel"
            type="cobong.jeongwoojin.cobongmemo.cobongmemo.view.memo.textmemo.TextMemoViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/exit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:maxWidth="30dp"
                            android:maxHeight="30dp"
                            android:onClick="@{() -> viewmodel.onExitClick()}"
                            android:src="@drawable/icon_close" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:hint="@string/writeMemoTextView" />

                        <ImageView
                            android:id="@+id/writeMemo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:adjustViewBounds="true"
                            android:maxWidth="30dp"
                            android:maxHeight="30dp"
                            android:onClick="@{() -> viewmodel.onWriteClick()}"
                            android:src="@drawable/icon_ok" />
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        android:background="#D3D0D0" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:hint="@string/writeMemoTitle"
                            android:inputType="text"
                            android:text="@{viewmodel.item.title}" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        android:background="#D3D0D0" />

                    <EditText
                        android:id="@+id/subTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@android:color/transparent"
                        android:hint="@string/writeMemoSub"
                        android:inputType="text"
                        android:text="@{viewmodel.item.subTitle}" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        android:background="#D3D0D0" />

                    <EditText
                        android:id="@+id/content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@android:color/transparent"
                        android:gravity="top"
                        android:hint="@string/writeMemoContent"
                        android:inputType="textMultiLine"
                        android:text="@{viewmodel.item.content}" />
                </LinearLayout>


            </ScrollView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#D3D0D0" />


        </LinearLayout>


    </LinearLayout>


</layout>